update bugs on mobile adding media queries for searchform and adding breakponits for hourly and daily components

--- a/src/header/SearchForm.css
+++ b/src/header/SearchForm.css
@@ -3,5 +3,17 @@
 }
 
 .searchbar {
-  width: 50%;
+  width: 100%;
+}
+
+@media all and (min-width: 991px) {
+  .searchbar {
+    width: 75%;
+  }
+}
+
+@media all and (min-width: 1607px) {
+  .searchbar {
+    width: 50%;
+  }
 }
